# tex2obsidian

./: CLAUDE.md  Makefile  README.md  pyproject.toml
src/tex2obsidian/: __main__.py  cli.py  config.py  pandoc.py  postprocess.py  preprocess.py  splice.py
src/tex2obsidian/pandoc_filters/: unwrap_theorem_emph.lua
src/tex2obsidian/profiles/: default.toml  schuller-quantum.toml  schuller.toml
tests/: conftest.py  test_cli.py  test_config.py  test_pipeline.py  test_postprocess.py  test_preprocess.py  test_splice.py
tests/fixtures/: sample_expected.md  sample_input.tex  sample_target.md
